syntax = "proto3";

package com.example.oms.grpc;

option java_multiple_files = true;
option java_package = "com.example.oms.grpc";
option java_outer_classname = "OrderProto";

import "google/protobuf/timestamp.proto";

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  PROCESSING = 2;
  SHIPPED = 3;
  DELIVERED = 4;
  CANCELLED = 5;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message Order {
  string id = 1;
  string customer_id = 2;
  google.protobuf.Timestamp created_at = 3;
  OrderStatus status = 4;
  repeated OrderItem items = 5;
}

message CreateOrderRequest {
  string customer_id = 1;
  repeated OrderItem items = 2;
}

message OrderId {
  string id = 1;
}

message ListOrdersRequest {
  // Optional filter by status; if ORDER_STATUS_UNSPECIFIED -> return all
  OrderStatus status = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  OrderStatus status = 2;
}

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (Order);
  rpc GetOrder (OrderId) returns (Order);
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (Order);
  rpc CancelOrder (OrderId) returns (Order);
}


